Misc fixes.
Updated dotnet on api, fixed nullable properties becoming required in client. Fixed some naming conventions and started setting up for editing applications
