# JobHuntAPI/Model/Dto/ApplicationRequestDto.cs
@@ -1,0 +1,8 @@
+﻿namespace JobHuntAPI.Model.Dto
+{
+	public class ApplicationRequestDto
+	{
+		public Guid UserId { get; set; }
+		public Guid ApplicationId { get; set; }
+	}
+}
